infrastructure/k8s/ingress/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress
  namespace: backend

spec:
  ingressClassName: nginx

  rules:
    - host: api.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: api-gateway
                port:
                  number: 8000
