infrastructure/k8s/ingress/cart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cart-service-ingress
  namespace: backend
spec:
  ingressClassName: nginx

  rules:
    - host: cart.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: cart-service

                port:
                  number: 8000
