infrastructure/k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: support-ingress
  namespace: default

spec:
  ingressClassName: nginx

  rules:
    - host: support.local
      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: support-service
                port:
                  number: 8000
