infrastructure/k8s/ingress/inventory-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: inventory-service-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: inventory.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: inventory-service

                port:
                  number: 8000
