infrastructure/k8s/ingress/notification-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: notification-service-ingress
  namespace: backend

spec:
  ingressClassName: nginx

  rules:
    - host: notification.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: notification-service

                port:
                  number: 8000
