infrastructure/k8s/ingress/order-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: order-service-ingress
  namespace: default
  
spec:
  ingressClassName: nginx

  rules:
    - host: order.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: order-service

                port:
                  number: 8000
