infrastructure/k8s/ingress/product-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: product-service-ingress
  namespace: default

spec:
  ingressClassName: nginx

  rules:
    - host: product.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: product-service

                port:
                  number: 8000
