infrastructure/k8s/ingress/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: rabbitmq-service-ingress
  namespace: messaging

spec:
  ingressClassName: nginx

  rules:
    - host: rabbitmq.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: rabbitmq

                port:
                  name: management
