infrastructure/k8s/ingress/user-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: user-service-ingress
  namespace: default

spec:
  ingressClassName: nginx

  rules:
    - host: user.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: user-service

                port:
                  number: 8000
